--- a/ExerciseWeb/Areas/Admin/Views/Category/Delete.cshtml
+++ b/ExerciseWeb/Areas/Admin/Views/Category/Delete.cshtml
@@ -1,30 +1,30 @@
 ﻿@model Category
 
-<div class="card shadow border-0 mt-0">
-    <div class="card-header bg-secondary bg-gradient py-3 mt-0">
+<div class="card border-0 shadow">
+    <div class="card-header bg-secondary bg-gradient mt-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white">Edit Category</h2>
+                <h2 class="text-white py-2">Delete Category</h2>
             </div>
         </div>
     </div>
-    <div class="card-body">
+    <div class="card-body p-4">
         <form method="post" class="row">
             <input asp-for="Id" hidden />
-            <div class="border pt-2 mt-2">
+            <div class="border pt-3 mt-4 ">
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="Name" class="form-control border-0 shadow" />
+                    <input asp-for="Name" disabled class="form-control border-0 shadow" />
                     <label asp-for="Name" class="ms-2"></label>
-                    <span asp-validation-for="Name" class="text-danger"></span>
+
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="DisplayOrder" class="form-control border-0 shadow" />
+                    <input asp-for="DisplayOrder" disabled class="form-control border-0 shadow" />
                     <label asp-for="DisplayOrder" class="ms-2"></label>
-                    <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+
                 </div>
                 <div class="row p-2">
                     <div class="col-6 col-md-2">
-                        <button type="submit" class="btn btn-info form-control">Edit</button>
+                        <button type="submit" class="btn btn-danger form-control">Delete</button>
                     </div>
                     <div class="col-6 col-md-2">
                         <a asp-controller="Category" asp-action="Index" class="btn btn-outline-primary form-control">Back to List</a>
@@ -33,13 +33,9 @@
             </div>
 
         </form>
+
     </div>
 </div>
 
 
 
-@section Scripts {
-    @{
-        <partial name="_ValidationScriptsPartial" />
-    }
-}
