--- a/ExerciseWeb/Areas/Admin/Views/Category/Edit.cshtml
+++ b/ExerciseWeb/Areas/Admin/Views/Category/Edit.cshtml
@@ -1,49 +1,45 @@
 ﻿@model Category
 
-<div class="card shadow border-0 mt-4">
-    <div class="card-header bg-secondary bg-gradient mt-0 py-3">
+<div class="card shadow border-0 mt-0">
+    <div class="card-header bg-secondary bg-gradient py-3 mt-0">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Create Category</h2>
+                <h2 class="text-white">Edit Category</h2>
             </div>
         </div>
     </div>
-    <div class="card-body">
+    <div class="card-body p-4">
         <form method="post" class="row">
-            <div class="border pt-2 mt-2 ">
-                        
- 
-                <div class="from-floating py-2 col-12">
+            <input asp-for="Id" hidden />
+            <div class="border pt-2 mt-2">
+                <div class="form-floating py-2 col-12">
                     <input asp-for="Name" class="form-control border-0 shadow" />
                     <label asp-for="Name" class="ms-2"></label>
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
-                <div class="from-floating py-2 col-12">
+                <div class="form-floating py-2 col-12">
                     <input asp-for="DisplayOrder" class="form-control border-0 shadow" />
                     <label asp-for="DisplayOrder" class="ms-2"></label>
                     <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                 </div>
-                <div class="row p-2 ">
+                <div class="row p-2">
                     <div class="col-6 col-md-2">
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
+                        <button type="submit" class="btn btn-info form-control">Edit</button>
                     </div>
                     <div class="col-6 col-md-2">
                         <a asp-controller="Category" asp-action="Index" class="btn btn-outline-primary form-control">Back to List</a>
                     </div>
                 </div>
-                
             </div>
 
-
         </form>
-
     </div>
 </div>
 
 
 
-        @section Scripts{
-            @{
-                <partial name="_ValidationScriptsPartial"/>
-            }
-        }
+@section Scripts {
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
