--- a/ExerciseWeb/Areas/Admin/Views/Category/Index.cshtml
+++ b/ExerciseWeb/Areas/Admin/Views/Category/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Category>
 
 
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 my-4">
     <div class="card-header bg-primary bg-gradient py-3 mt-0">
         <div class="row">
             <div class="col-12 text-center">
@@ -12,7 +12,7 @@
     <div class="card-body">
         <div class="container">
             <div class="text-end ">
-                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                <a asp-controller="Category" asp-action="Create" class="btn btn-primary mb-2">
                     <i class="bi bi-plus-lg"></i>Create New Category
                 </a>
             </div>
@@ -26,7 +26,6 @@
                         <th>
                             Display Order
                         </th>
-                        <
                         <th></th>
                     </tr>
                 </thead>
@@ -39,10 +38,10 @@
                             <td>
                                 <div class="w-75 btn-group" role="group">
                                     <a asp-controller="category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                                        <i class="bi bi-pencil-square"></i>
+                                        <i class="bi bi-pencil-square"></i> Edit
                                     </a>
                                     <a asp-controller="category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                                        <i class="bi bi-trash"></i>
+                                        <i class="bi bi-trash"></i> Delete
                                     </a>
                                 </div>
                             </td>
