--- a/ExerciseWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/ExerciseWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="card-body">
         <div class="container">
             <div class="text-end ">
-                <a asp-controller="Product" asp-action="Create" class="btn btn-primary mb-2">
+                <a asp-controller="Product" asp-action="UpSert" class="btn btn-primary mb-2">
                     <i class="bi bi-plus-lg"></i>Create New Product
                 </a>
             </div>
@@ -39,7 +39,7 @@
                             <td></td>
                             <td>
                                 <div class="w-75 btn-group" role="group">
-                                    <a asp-controller="product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                    <a asp-controller="product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                         <i class="bi bi-pencil-square"></i> Edit
                                     </a>
                                     <a asp-controller="product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
