--- a/ExerciseWeb/Areas/Customer/Views/_ViewImports.cshtml
+++ b/ExerciseWeb/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ExerciseWeb
 @using Exercise.Models
+@using Exercise.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
